--- a/WebClient/src/components/Forum/ForumPage.css
+++ b/WebClient/src/components/Forum/ForumPage.css
@@ -1,128 +1,178 @@
-.navbar-nav{
-    width: 100%;
-}
-
-@media(min-width:568px){
-    .end{
-        margin-left: auto;
-    }
-}
-
-@media(max-width:768px){
-    #post{
-        width: 100%;
-    }
-}
-#clicked{
-    padding-top: 1px;
-    padding-bottom: 1px;
-    text-align: center;
-    width: 100%;
-    background-color: #ecb21f;
-    border-color: #a88734 #9c7e31 #846a29;
-    color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 13px; 
-}
-
-#profile{
-    background-color: unset;
+.contain-forum{
+    width: 87%;
+    height: 87%;
+    background-color: #D2F1FF;
+    margin-top: 10%;
     
-} 
+    margin-right: 20%;
+}
 
-#post{
-    margin: 10px;
-    padding: 6px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    text-align: center;
-    background-color: #ecb21f;
-    border-color: #a88734 #9c7e31 #846a29;
-    color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 13px;
-    width: 50%;
+.contain-comments{
+    margin-top: 10%;
+
+    width: 87%;
+    height: 87%;
+    background-color: #D2F1FF;
+    margin-left: 10%;
+    overflow-y: scroll;
+}
+
+.left{
+    float: left; width: 50%;
+    background-color: #262626;
+    height: 100vh;
+}
+
+.right{
+    float: right; width: 50%;
+    background-color: #262626;
+    height: 100vh;
+}
+
+.comments-header2{
+    color: #262626;
+    margin-left:-300px;
+
+}
+
+.form-label{
+    color: #262626;
+    
+
+}
+
+.comments-header{
+    margin-top:10px ;
+    margin-left:-350px;
+    color: #262626;
+}
+
+.form-header{
+    margin-top:10px ;
+    margin-left:-300px;
+    color: #262626;
+}
+
+.form-header2{
+    color: #262626;
+    margin-left:-400px;
+}
+
+#exampleFormControlInput1{
+    
+    margin-left: 50px;
+    width: 550px;
+
+}
+
+#exampleFormControlTextarea1{
+    margin-left: 50px;
+    width: 550px;
+}
+
+#customFile{
+    margin-left: 50px;
+    width: 550px;
+}
+
+.comment-button{
+    background-color:#FFD753;
+    border-color: #FFD753;
+    color:#262626;
+    width: 100px;
+    position: absolute;
+    right:50px;
+    top: 500px;
 }
 
 body{
-    background-color: black;
+    margin-top:20px;
+    background-color:#e9ebee;
 }
 
-#nav-items li a,#profile{
-    text-decoration: none;
-    color: rgb(224, 219, 219);
-    background-color: black;
-}
-
-
-.comments{
-    margin-top: 5%;
-    margin-left: 20px;
-}
-
-.darker{
-    border: 1px solid #ecb21f;
-    background-color: black;
-    float: right;
-    border-radius: 5px;
-    padding-left: 40px;
-    padding-right: 30px;
-    padding-top: 10px;
-}
-
-.comment{
-    border: 1px solid rgba(16, 46, 46, 1);
-    background-color: rgba(16, 46, 46, 0.973);
-    float: left;
-    border-radius: 5px;
-    padding-left: 40px;
-    padding-right: 30px;
-    padding-top: 10px;
+.be-comment-block {
+    margin-top: 50px;
+    margin-bottom: 50px !important;
+    border: 1px solid #262626;
+    border-radius: 2px;
+    padding: 50px 70px;
     
 }
-.comment h4,.comment span,.darker h4,.darker span{
-    display: inline;
+
+.comments-title {
+    font-size: 16px;
+    color: #262626;
+    margin-bottom: 15px;
+    font-family: 'Conv_helveticaneuecyr-bold';
 }
 
-.comment p,.comment span,.darker p,.darker span{
-    color: rgb(184, 183, 183);
+.be-img-comment {
+    width: 60px;
+    height: 60px;
+    float: left;
+    margin-bottom: 15px;
 }
 
-h1,h4{
-    color: white;
-    font-weight: bold;
-}
-label{
-    color: rgb(212, 208, 208);
+.be-ava-comment {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
 }
 
-#align-form{
-    margin-top: 20px;
-}
-.form-group p a{
-    color: white;
+.be-comment-content {
+    margin-left: 80px;
 }
 
-#checkbx{
-    background-color: black;
+.be-comment-content span {
+    display: inline-block;
+    width: 49%;
+    margin-bottom: 15px;
 }
 
-#darker img{
-    margin-right: 15px;
-    position: static;
+.be-comment-name {
+    font-size: 13px;
+    font-family: 'Conv_helveticaneuecyr-bold';
 }
 
-.form-group input,.form-group textarea{
-    background-color: black;
-    border: 1px solid rgba(16, 46, 46, 1);
-    border-radius: 12px;
+.be-comment-content a {
+    color: #383b43;
 }
 
-form{
-    border: 1px solid rgba(16, 46, 46, 1);
-    background-color: rgba(16, 46, 46, 0.973);
-    border-radius: 5px;
-    padding: 20px;
- }
+.be-comment-content span {
+    display: inline-block;
+    width: 49%;
+    margin-bottom: 15px;
+}
+
+.be-comment-time {
+    text-align: right;
+}
+
+.be-comment-time {
+    font-size: 11px;
+    color: #b4b7c1;
+}
+
+.be-comment-text {
+    font-size: 13px;
+    line-height: 18px;
+    color: #7a8192;
+    display: block;
+    background: #f6f6f7;
+    border: 1px solid #edeff2;
+    padding: 15px 20px 20px 20px;
+}
+
+.closeButton{
+    position: relative;
+    top:-40px;
+    left: 270px;
+}
+
+.editButton{
+    position: relative;
+    top:-40px;
+    left: 250px;
+}
+
+
