--- a/WebClient/src/components/Footer/Footer.css
+++ b/WebClient/src/components/Footer/Footer.css
@@ -1,10 +1,16 @@
 .footer{
-    position:absolute;
+    position:fixedS;
 left:0;
 bottom:0;
 right:0;
+background-color: #262626;
 }
 
 .text-uppercase{
     margin-top: 40px;
+}
+
+.col{
+    padding:0;
+    margin: 0;
 }
