--- a/WebClient/src/components/GapFillingQuestion/GapFillingQuestion.css
+++ b/WebClient/src/components/GapFillingQuestion/GapFillingQuestion.css
@@ -1,6 +1,9 @@
 .gap-filling-question {
     margin-top: auto;
     margin-bottom: auto;
+    padding: 12px;
+    border: 1px solid #00b1ff;
+    border-radius: 6px;
 }
 
 .question-submit-button {
