--- a/WebClient/src/pages/ExamPage/ExamPage.css
+++ b/WebClient/src/pages/ExamPage/ExamPage.css
@@ -7,11 +7,9 @@
     margin-top: auto;
     margin-bottom: auto;
     background-color: #3752b4;
-    /* padding-left: 50px;
-    padding-right: 50px; */
 }
 
-.break {
-    flex-basis: 100%;
-    height: 0;
+.timer {
+    position: absolute;
+    top: 70px;
 }
