--- a/WebClient/src/pages/ExamResultPage/ExamResultPage.css
+++ b/WebClient/src/pages/ExamResultPage/ExamResultPage.css
@@ -1,3 +1,9 @@
 .exam-result-page {
-    background-color: #00b1ff;
+    background-color: #d2f1ff;
+    min-height: 93vh;
+}
+
+.pie-chart {
+    padding-left: 100px;
+    padding-right: 100px;
 }
