--- a/WebClient/src/components/GapFillingQuestion/GapFillingQuestion.css
+++ b/WebClient/src/components/GapFillingQuestion/GapFillingQuestion.css
@@ -2,7 +2,7 @@
     margin-top: auto;
     margin-bottom: auto;
     padding: 12px;
-    border: 1px solid #00b1ff;
+    border: 2px solid #3752b4;
     border-radius: 6px;
 }
 
